test/scc/pp/errors/020.a
020.t:2:1: error: macro 'A' requires 4 arguments, but only 3 given